tests/invalid_scir_h/invalid_unresolved_name.scirh
module invalid.unresolved_name
fn bad x int -> int !
  return y
